# Skillbox_CPlusPlus

./: .~lock.Упражнения Skillbox2.rtf#
14/: 1  2  3  4  5
16/: 2  3  4  5
17/: 1  2  3
17_Task2_TacToe/: 17_Task2_Tac-Toe.sln
17_Task9_SeaBattle/: 17_Task9_SeaBattle.sln
18/: 1  2  3  4
19_Task1/: 19_Task1.sln  TextFile2.txt
19_Task2/: 19_Task2.sln  TextFile1.txt
19_Task3/: 19_Task3.sln  Table.txt
19_Task4/: 19_Task4.sln
19_Task5/: 19_Task5.sln  answer.txt  question.txt
19_Task_1_Speedometer/: 19_Task_1_Speedometer.sln
20/: 3  4
20_Task1/: 20_Task1.sln
20_Task2/: 20_Task2.sln  pic.txt
20_Task4/: 20_Task4.sln
21_Task1/: 21_Task1.sln  Table.txt
21_Task2_Village/: 21_Task2_Village.sln
21_Task3_Vector/: 21_Task3_Vector.sln
21_Task4_rpg/: 21_Task4_rpg.sln
22_Task1_directory/: 22_Task1_directory.sln
22_Task2_registry/: 22_Task2_registry.sln
22_Task3_anagram/: 22_Task3_anagram.sln
23/: 1  2  3
24/: 1  2  3
25_Task1_Operation/: 25_Task1_Operation.sln  CMakeLists.txt
25_Task2_Correct/CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp
25_Task2_Correct/CMakeProject1/include/: ram.h
25_Task2_Correct/CMakeProject1/src/: kbd.cpp
25_Task2_Sim_Computer/: 25_Task2_Sim_Computer.sln
26_Task1_AudioPlayer/: 26_Task1_AudioPlayer.sln
26_Task2_Mobile/: 26_Task2_Mobile.sln  Example_contacs_List.txt
26_Task3_Desktop/: 26_Task3_Desktop.sln
27_Task1_ElfVillage/: 27_Task1_ElfVillage.sln
27_Task2-GeoFigure/: 27_Task2-GeoFigure.sln
27_Task3-Company/: 27_Task3-Company.sln
28_Task1_Swim/: 28_Task1_Swim.sln
28_Task2_RailStation/: 28_Task2_RailStation.sln
28_Task3_Kitchen/: 28_Task3_Kitchen.sln
29_Task_AnimalEncounter/: 29_Task_AnimalEncounter.sln
30_Task2_HeaderCapture/30_Task2_HeaderCapture/: 30_Task2_HeaderCapture.cpp  30_Task2_HeaderCapture.h  CMakeLists.txt
30_Task3_ArgRequest/30_Task3_ArgRequest/: 30_Task3_ArgRequest.cpp  30_Task3_ArgRequest.h  CMakeLists.txt
31_Task1_PtrToy/: 31_Task1_PtrToy.sln
31_Task2_Graph/: 31_Task2_Graph.sln
32_Task1_FilmInfo/: CMakeLists.txt
32_Task1_FilmInfo/32_Task1_FilmInfo/: 32_Task1_FilmInfo.cpp  CMakeLists.txt
32_Task2_FilmsDate/: CMakeLists.txt
32_Task3_Protobuf/: CMakeLists.txt
32_Task3_Protobuf/32_Task3_Protobuf/: 32_Task3_Protobuf.cpp  32_Task3_Protobuf.h  CMakeLists.txt  record.pb.cc  record.pb.h  record.proto
33_Task1_ShopCart/: 33_Task1_ShopCart.sln
33_Task2_Fishing/: 33_Task2_Fishing.sln
33_Task3_DataRegistre/: 33_Task3_DataRegistre.sln
33_Task4_Arithmetic/: 33_Task4_Arithmetic.sln
35_Task1_Auto/: 35_Task1_Auto.sln
35_Task2_StructurData/: 35_Task2_StructurData.sln
35_Task3_FileSystem/: 35_Task3_FileSystem.sln
36_Task_Circle/: 36_Task_Circle.sln
37_Task1_GraphCalculator/: 37_Task1_GraphCalculator.sln
37_Task3_ControllerTV/: 37_Task3_ControllerTV.sln
38_Task1-SoundRedBytton/: CMakeLists.txt  main.cpp
38_Task2EditHTMLFile/: 38_Task2EditHTMLFile.sln
38_Task3_BlurEffect/: 38_Task3_BlurEffect.sln
39_Task1_RideCircle/: CMakeLists.txt  main.qml
39_Task2_CheckNumberPhone/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
UE4_Part1_Task13/: UE4_Part1_Task13.sln
UE4_Part1_Task14/: UE4_Part1_Task14.sln
UE4_Part1_Task15/: Lesson_15.txt  UE4_Part1_Task15.sln
UE4_Part1_Task16/: Lesson_16.txt  UE4_Part1_Task16.cpp  UE4_Part1_Task16.sln  UE4_Part1_Task16.vcxproj  UE4_Part1_Task16.vcxproj.filters
UE4_Part1_Task17/: UE4_Part1_Task17.cpp  UE4_Part1_Task17.sln  UE4_Part1_Task17.vcxproj  UE4_Part1_Task17.vcxproj.filters
UE4_Part1_Task18/: UE4_Part1_Task18.cpp  UE4_Part1_Task18.sln  UE4_Part1_Task18.vcxproj  (+1 more)
(+617 files in other folders)
